--- a/Front-end/HTML/test.html
+++ b/Front-end/HTML/test.html
@@ -6,28 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
     <style>
-        th,td {
-            padding: 20px;
-            background-color: yellow;
+        body {
+            margin: 0px;
         }
-        table {
-            border: 2px solid red;
-            border-spacing: 10px;
+        ul {
+            background-color: #181414;
+            color: white;
+            padding-left: 20px;
+        }
+        li {
+            display: inline-block;
+            box-sizing: border-box;
+            padding: 15px 20px;
+            font-size: 17px;
+        }
+        li:hover {
+            background-color: blanchedalmond;
         }
     </style>
 </head>
 <body>
-    <table>
-        <tr>
-            <th>name</th>
-            <th>age</th>
-            <th>qualification</th>
-        </tr>
-        <tr>
-            <td>ashok</td>
-            <td>29</td>
-            <td>b.tech</td>
-        </tr>
-    </table>
+    <ul type='none'>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JAVASCRIPT</li>
+        <li>JQUERY</li>
+    </ul>
 </body>
 </html>
